ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.fast-code.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rolls-service
                port:
                  number: 80
